#10, #12: Fixing blurry text, SVG breakage and better separating CC's CSS

--- a/src/inject/inject.css
+++ b/src/inject/inject.css
@@ -5,28 +5,25 @@
  * http://daneden.me/animate
  */
 
-body { /* Addresses a small issue in webkit: http://bit.ly/NEdoDq */
-  -webkit-backface-visibility: hidden;
-}
-.animated {
+.CC-animated {
   -webkit-animation-duration: 1s;
           animation-duration: 1s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
 }
 
-@-webkit-keyframes copiedToClipboard {
+@-webkit-keyframes CC-copiedToClipboard {
     0% { -webkit-transform: scale(1);   box-shadow: none; }
    50% { -webkit-transform: scale(1.1); box-shadow: 0px 0px 5px 2px rgba(0, 128, 255, 0.5); }
   100% { -webkit-transform: scale(1);   box-shadow: none;}
 }
-@keyframes copiedToClipboard {
+@keyframes CC-copiedToClipboard {
     0% { transform: scale(1);   box-shadow: none; }
    50% { transform: scale(1.1); box-shadow: 0px 0px 5px 2px rgba(0, 128, 255, 0.5); }
   100% { transform: scale(1);   box-shadow: none;}
 }
 
-.copiedToClipboard {
-  -webkit-animation-name: copiedToClipboard;
-  animation-name: copiedToClipboard;
+.CC-copiedToClipboard {
+  -webkit-animation-name: CC-copiedToClipboard;
+  animation-name: CC-copiedToClipboard;
 }
